--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "lite-server": "^1.12.9"
     },
     "dependencies": {
-        "jquery": "^3.2.1"
+        "jquery": "^3.2.1",
+        "popper.js": "^1.12.9"
     }
 }
