--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "lite-server": "^1.12.9"
     },
     "dependencies": {
+        "@fortawesome/fontawesome": "^1.0.1",
         "bootstrap": "^4.0.0-beta.2",
         "jquery": "^3.2.1",
         "popper.js": "^1.12.9"
