--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@fortawesome/fontawesome": "^1.0.1",
         "bootstrap": "^4.0.0-beta.2",
         "jquery": "^3.2.1",
+        "particles.js": "^2.0.0",
         "popper.js": "^1.12.9"
     }
 }
