--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "levanijincharadze",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "My personal website",
     "scripts": {
-        "lite": "lite-server -port 10001",
+        "lite": "lite-server --port 10001",
         "start": "npm run lite"
     },
     "author": {
